add submmit and reset button

--- a/HTML y CSS/Tarea2.html
+++ b/HTML y CSS/Tarea2.html
@@ -14,8 +14,8 @@
         <label for="textarea">frase favorita</label>
         <br>
         <textarea name="frase-favorita" cols="30" rows="10"></textarea>
-        <button type="submit"></button>
-        <button type="reset"></button>
+        <button type="submit">Submit</button>
+        <button type="reset">Reset</button>
     </form>
 </body>
 </html>
